fix chrome blurry logo

--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -522,6 +522,7 @@ td a:hover {
 	position: absolute;
 	top: 4px;
 	left: 12px;
+	image-rendering: -webkit-optimize-contrast;
 }
 
 #site-logo-text {
